<resources>
    <string name="app_name">P06_AppAvaliaSerie</string>
    <string name="txt_dados">Dados da Série de TV</string>
    <string name="txt_titulo">Título</string>
    <string name="txt_genero">Gênero</string>
    <string name="txt_ativa">Está ativa?</string>
    <string name="txt_avaliacao">Sua avaliação</string>
    <string name="txt_avaliar">Avaliar</string>
    <string name="txt_compartilhar">Compartilhar</string>
    <string-array name="spin_generos">
        <item>Escolha...</item>
        <item>Ação</item>
        <item>Aventura</item>
        <item>Comédia</item>
        <item>Drama</item>
        <item>Suspense</item>
        <item>Terror</item>
    </string-array>
</resources>
